# adalog

./: .gitignore  README.md  adalog.gfi  adalog.py  pyproject.toml  requirements.txt
notebooks/: eeg2txt.ipynb  utils.py
src/adalog/: adalog.py  adalog_engine.py  adalog_off.py  adalog_on.py  adalog_play.py  adalog_rec.py  adalog_sense.py  base_modality.py  utils.py
src/adalog/modalities/: audio.py  drawing.py  eeg.gfi  eeg.py  meteo.py  midi.py  text.py
src/adalog/modalities/engine/: inspector.py
src/adalog/modalities/off/: inspector.py
src/adalog/modalities/on/: dream_incubator.gfi  dream_incubator.py
src/adalog/modalities/play/: dream_incubator.gfi  dream_incubator.py
src/adalog/modalities/rec/: __init__.py  audio.py  drawing.py  ecg.gfi  ecg.py  eeg.py  meteo.py  midi.py  osc.py  text.py
src/adalog/modalities/sense/: audio.py  drawing.py  ecg.gfi  ecg.py  ecg2.gfi  eeg.gfi  eeg.py  meteo.py  midi.py  osc.py  output_20250610_162415.csv  text.py
src/adalog/scripts/: reader.py
