[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 128

[project.scripts]
adalog-off = "adalog.adalog_off:main"
adalog-rec = "adalog.adalog_rec:main"
adalog-on = "adalog.adalog_on:main"

[project]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
description = "Neurophenomenological self-logging interface"
dynamic = ["dependencies"]
keywords = ["self-logging", "neurophenomenology", "eeg", "multimodal"]
name = "adalog"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
version = "0.1.0"
